# nikon-control

./: .gitignore  README.md  pyproject.toml
docs/: calibration.md  experimental-sessions.md  tracked-rois.md  windows-deploy.md
jobs/: README.md
src/nikon_control/: __init__.py  annotate.py  cli.py  detect.py  detector.py  io.py  jobs_log.py  preannotate.py  schema.py  tracking.py
src/nikon_control/dashboard/: __init__.py  _server.py  app.py  launch.py  state.py
tests/: test_annotate.py  test_class_merge.py  test_dashboard_state.py  test_debris.py  test_division.py  test_io.py  test_jobs_log.py  test_tracking.py
