[project]
name = "nikon-control"
version = "0.0.1"
description = "Drive a Nikon microscope (NIS Elements + JOBS 6.20) for cell-targeted 10x->40x acquisition."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scikit-image>=0.22",
  "matplotlib>=3.7",
  "tifffile>=2024.1.0",
]

[project.optional-dependencies]
nd2 = ["nd2>=0.10"]
# Detection + tracking pipeline (runs the trained Faster R-CNN).
detect = [
  "nd2>=0.10",
  "torch>=2.2",
  "torchvision>=0.17",
  "scipy>=1.10",
]
# Bokeh annotation dashboard (the replacement for the napari tool).
dashboard = [
  "nd2>=0.10",
  "torch>=2.2",
  "torchvision>=0.17",
  "scipy>=1.10",
  "bokeh>=3.4",
]
# Legacy napari annotator (superseded by the Bokeh dashboard).
annotate = [
  "nd2>=0.10",
  "napari[all]>=0.4.18",
  "magicgui>=0.7",
]
dev = ["pytest>=7"]

[project.scripts]
nikon-control = "nikon_control.cli:main"
nikon-control-annotate = "nikon_control.annotate:main"
nikon-control-preannotate = "nikon_control.preannotate:main"
nikon-control-dashboard = "nikon_control.dashboard.launch:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
